--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ plugins {
 mainClassName = 'App'
 
 dependencies {
+    implementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.1'
+
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
@@ -25,6 +29,7 @@ dependencies {
 
 // In this section you declare where to find the dependencies of your project
 repositories {
+    mavenCentral()
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
